# veln

./: .gitignore  Cargo.toml  INSTALL.md  LICENSE  README.md  TODO.md  config.example.toml  install.sh  justfile  make-pkg.sh
.github/workflows/: web-ci.yml
@docs/: TODO.md
backend/: .gitignore
doc/: API.md  INFRASTRUCTURE.md  NETWORKING.md
docs/: API.md  DESIGN.md  DOMAIN.md  INSTALL.md  RBAC_PLAN.md  README.md  TODO.md  VELN_FOUNDATION.md
port/: README.md
port/sysutils/veln/: Makefile  distinfo  pkg-descr
port/sysutils/veln/files/: veln.in
scripts/: install.sh  make-pkg.sh  uninstall.sh
src/: api_key_commands.rs  application.rs  cli.rs  config.rs  error.rs  lib.rs  main.rs
src/domain/: mod.rs  repository.rs  requirements.rs  resources.rs  vm.rs
src/infrastructure/: api.rs  bhyve.rs  cloudinit.rs  mod.rs  zfs.rs
web/: .env.development  .env.example  .eslintrc.cjs  .gitignore  .prettierrc  index.html  justfile  package-lock.json  package.json  vitest.config.ts
web/examples/: dashboard.html  login.html
web/src/: App.test.ts  App.vue  style.css  types.test.ts  types.ts
web/src/components/: ActionTiles.vue  ActivityLog.vue  LoginPage.vue  Sidebar.vue  SystemStats.vue  TopNav.vue  VMDetail.vue  VMList.vue
